--- a/libumwsu/TODO
+++ b/libumwsu/TODO
@@ -1,10 +1,18 @@
 
-- créer une struct module dans src/module.c
-- ajouter dans cette struct la fonction de uninstall
-
 - ajouter src/dir.c pour appliquer une fonction sur tous les fichiers d'un directory [OK]
 
-- ajouter le chargement de modules pour tous les .so d'un directory (voir libmagic pour filtrer les fichiers autres que .so)
+- ajouter le chargement de modules pour tous les .so d'un directory (voir libmagic pour filtrer les fichiers autres que .so) [OK]
+
+- créer une struct module dans src/module.c
+-- ajouter dans cette struct la fonction de uninstall
+-- module_init: ajout des magic textual description associées au module, allocation de la structure spécifique et initialisation
+
+- ajouter scan d'un fichier en utilisant libmagic (retrouver la liste des magic_file dans fix-extension.sh)
+-- hash table associant magic textual description et (fonction de scan, donnée du module)
+
+- ajouter module de test de scan
+
+- ajouter scan récursif d'un directory (en utilisant src/dir.c)
 
 - ajouter modules de scans: module 4, module 5.2, module 5.1/clamav
-- ajouter scan récursif d'un directory (en utilisant src/dir.c)
+
