--- a/libumwsu/TODO
+++ b/libumwsu/TODO
@@ -4,11 +4,13 @@
 - ajouter le chargement de modules pour tous les .so d'un directory (voir libmagic pour filtrer les fichiers autres que .so) [OK]
 
 - créer une struct module dans src/module.c
--- ajouter dans cette struct les fonctions du module (conf_inif, conf, init, scan, uninstall et les types de fichiers scannés
--- module_init: ajout des magic textual description associées au module, allocation de la structure spécifique et initialisation
--- table de hachage: magic_desc -> GPtrArray de module *, trier le GPtrArray par poids du module
+-- ajouter dans cette struct les fonctions du module (conf_inif, conf, init, scan, uninstall et les types de fichiers scannés [OK]
+-- module_init: ajout des magic textual description associées au module, allocation de la structure spécifique et initialisation [OK]
+-- table de hachage: magic_desc -> GPtrArray de module *, trier le GPtrArray par poids du module [OK]
 
 - ajouter scan d'un fichier en utilisant libmagic (retrouver la liste des magic_file dans fix-extension.sh)
+
+- ajouter modules de scans: module 4, module 5.2, module 5.1/clamav
 
 - ajouter module de test de scan
 
@@ -16,5 +18,4 @@
 -- création du pool de threads
 -- lancement d'un scan de fichier dans un thread
 
-- ajouter modules de scans: module 4, module 5.2, module 5.1/clamav
 
