--- a/libumwsu/TODO
+++ b/libumwsu/TODO
@@ -15,10 +15,10 @@
 -- module 5.2
 -- module 5.1/clamav [OK]
 
-- ajouter outil de scan en ligne de commande
+- ajouter outil de scan en ligne de commande [OK]
 
 - ajouter scan récursif d'un directory (en utilisant src/dir.c)
--- première version sans multi-thread
+-- première version sans multi-thread [OK]
 -- création du pool de threads
 -- lancement d'un scan de fichier dans un thread
 
