--- a/libumwsu/TODO
+++ b/libumwsu/TODO
@@ -12,7 +12,7 @@
 
 - ajouter modules de scans: 
 -- module 4 [OK]
--- module 5.2
+-- module 5.2 [OK]
 -- module 5.1/clamav [OK]
 
 - ajouter outil de scan en ligne de commande [OK]
