* fixed inconsistent naming

--- a/libumwsu/ChangeLog
+++ b/libumwsu/ChangeLog
@@ -1,3 +1,7 @@
+2014-08-11  François Déchelle  <francois@dechelle.net>
+
+	* fixed inconsistent naming
+
 2014-08-08  François Déchelle  <francois@dechelle.net>
 
 	* modified messages
