--- a/libumwsu/ChangeLog
+++ b/libumwsu/ChangeLog
@@ -1,5 +1,7 @@
 2014-08-27  François Déchelle  <francois@dechelle.net>
 
+	* added verbosity level in struct umwsu
+
 	* adding report structure, added better status evaluation in case of multiple modules scanning a file
 
 	* added UMWSU_SUSPICIOUS to enum umwsu_status, changed scan function and modules
