--- a/libumwsu/ChangeLog
+++ b/libumwsu/ChangeLog
@@ -1,5 +1,7 @@
 2014-08-28  François Déchelle  <francois@dechelle.net>
 
+	* implemented and tested multi-threaded version of directory scan
+
 	* added struct umwsu_report and detailled reporting from modules
 
 2014-08-27  François Déchelle  <francois@dechelle.net>
