--- a/umwsu-daemon/ChangeLog
+++ b/umwsu-daemon/ChangeLog
@@ -1,3 +1,7 @@
+2014-09-14  François Déchelle  <francois@dechelle.net>
+
+	* updated w.r.t. libumwsu changes
+
 2014-08-08  François Déchelle  <francois@dechelle.net>
 
 	* added documentation (man page)
