--- a/libumwsu/ChangeLog
+++ b/libumwsu/ChangeLog
@@ -1,3 +1,7 @@
+2014-10-16  François  <francois@dechelle.net>
+
+	* fixed compilation problem when building package on ubuntu 12.04
+
 2014-09-26  François  <francois@dechelle.net>
 
 	* changed alert reporting code to use local Perl agent via HTTP/Post request; tested
