--- a/libumwsu/TODO
+++ b/libumwsu/TODO
@@ -23,6 +23,46 @@ dbdir=/var/lib/uhuru/db/module5.2/
 analysable par un analyseur lexical seul, pas besoin d'analyseur syntaxique
 flex vs. hand made scanner?
 
+glib:
+g_key_file_new ()
+
+gboolean
+g_key_file_load_from_file (GKeyFile *key_file,
+                           const gchar *file,
+                           GKeyFileFlags flags,
+                           GError **error);
+
+gboolean
+g_key_file_load_from_dirs (GKeyFile *key_file,
+                           const gchar *file,
+                           const gchar **search_dirs,
+                           gchar **full_path,
+                           GKeyFileFlags flags,
+                           GError **error);
+
+tester si le groupe existe?
+gboolean
+g_key_file_has_group (GKeyFile *key_file,
+                      const gchar *group_name);
+
+pour chaque module, avec group_name = nom du module
+gchar **
+g_key_file_get_keys (GKeyFile *key_file,
+                     const gchar *group_name,
+                     gsize *length,
+                     GError **error);
+
+pour chaque clé, appeler la fonction conf du module
+gchar *
+g_key_file_get_value (GKeyFile *key_file,
+                      const gchar *group_name,
+                      const gchar *key,
+                      GError **error);
+void
+g_strfreev (gchar **str_array); pour les clés
+void
+g_key_file_free (GKeyFile *key_file);
+
 
 - test commit DEV
 - ajouter watch(directory)
