--- a/libumwsu/ChangeLog
+++ b/libumwsu/ChangeLog
@@ -1,3 +1,7 @@
+2015-02-10  François  <francois@dechelle.net>
+
+	* adding scan process protocol implementation
+
 2015-01-26  François  <francois@dechelle.net>
 
 	* removed alert sending via HTTPS, replaced by writing a file (changes in agent)
