* added callbacks in protocol handler

--- a/libumwsu/TODO
+++ b/libumwsu/TODO
@@ -1,7 +1,8 @@
 - ajouter service d'analyse idem windows avec analyse dans un process séparé 
 -- protocole: idem clamd, socket Unix; problème du protocole clamd % caractère :
--- structure: GArray? de GString ou GByteArray ou structure ad-hoc des mêmes
--- parser: crée une structure du même type
+-- parser du protocole: ajouter callbacks sur les commandes
+-- implémenter service de scan utilisant le protocole
+-- faire version de UMWSU utilisant le protocole au lieu de l'appel direct des modules
 
 
 - ajouter watch(directory) [OK, revoir l'implémentation]
