--- a/libumwsu/ChangeLog
+++ b/libumwsu/ChangeLog
@@ -1,3 +1,7 @@
+2015-02-11  François  <francois@dechelle.net>
+
+	* added callbacks in protocol handler
+
 2015-02-10  François  <francois@dechelle.net>
 
 	* implemented first working version of protocol handler
