--- a/libumwsu/TODO
+++ b/libumwsu/TODO
@@ -1,13 +1,16 @@
+
 - ajouter mise en quarantaine (voir IHM legacy)
-* utiliser un répertoire en 0333 appartenant à root (ajouter dans le script postinst du package)
+* utiliser un répertoire en 0333 appartenant à root (ajouter dans le script postinst du package) [OK, CHECK]
 * déplacer le fichier dans le directory de quarantaine avec un nouveau nom aléatoire [OK]
 * changer le mode du nouveau fichier à 00 [OK]
-
 
 - ajouter service d'analyse idem windows avec analyse dans un process séparé 
 -- protocole: idem clamd, socket Unix; problème du protocole clamd % caractère :
 -- parser du protocole: ajouter callbacks sur les commandes [OK]
--- implémenter service de scan utilisant le protocole
+-- implémenter service de scan utilisant le protocole:
+--- listen socket unix (/var/run/uhuru/uhuru.socket)
+--- poll vs. thread pool vs. prefork (non, possible duplication des bases chargées?): poll pour commencer
+--- version mono thread pour l'instant
 -- faire version de UMWSU utilisant le protocole au lieu de l'appel direct des modules
 
 
