--- a/libumwsu/TODO
+++ b/libumwsu/TODO
@@ -8,9 +8,9 @@
 -- protocole: idem clamd, socket Unix; problème du protocole clamd % caractère :
 -- parser du protocole: ajouter callbacks sur les commandes [OK]
 -- implémenter service de scan utilisant le protocole:
---- listen socket unix (/var/run/uhuru/uhuru.socket) [OK, VOIR CONFIG]
---- compléter config & umwsu_open(REMOTE)
---- poll vs. thread pool vs. prefork (non, possible duplication des bases chargées?): poll pour commencer
+--- listen socket unix (/var/run/uhuru/uhuru.socket) [OK]
+--- compléter config [OK]
+--- poll vs. thread pool vs. prefork (non, possible duplication des bases chargées?): poll pour commencer [OK]
 --- version mono thread pour l'instant
 -- faire version de UMWSU utilisant le protocole au lieu de l'appel direct des modules
 
