--- a/libumwsu/ChangeLog
+++ b/libumwsu/ChangeLog
@@ -1,3 +1,7 @@
+2015-03-04  François  <francois@dechelle.net>
+
+	* finished implementation of remote scanning in libumwsu
+
 2015-03-02  François  <francois@dechelle.net>
 
 	* tested remote scanning using netcat; works but termination must be fixed
