--- a/libumwsu/ChangeLog
+++ b/libumwsu/ChangeLog
@@ -1,5 +1,7 @@
 2015-03-04  François  <francois@dechelle.net>
 
+	* tested local vs. remote: output is exactly the same
+
 	* tested remote scanning using uhuru-scan command line
 
 	* finished implementation of remote scanning in libumwsu
