--- a/libumwsu/ChangeLog
+++ b/libumwsu/ChangeLog
@@ -1,3 +1,7 @@
+2015-03-17  François  <francois@dechelle.net>
+
+	* fixed directory traversal bug in case of access denied
+
 2015-03-16  François  <francois@dechelle.net>
 
 	* fixed g_thread_init() (must add to configure)
