--- a/libumwsu/TODO
+++ b/libumwsu/TODO
@@ -1,6 +1,6 @@
 
 - scan
-* déplacer le comptage des fichiers dans scan.c
+* déplacer le comptage des fichiers dans scan.c, parcourir une seule fois l'arborescence pour le compte de fichiers, mémoriser les chemins dans un tableau (mémoire?), ne pas reparcourir l'arborescence pour le scan
 * ajouter un argument dans les callbacks (file_count, file_report, scan_end)
 
 - démon de scan
