--- a/libumwsu/ChangeLog
+++ b/libumwsu/ChangeLog
@@ -1,3 +1,7 @@
+2015-05-29  François  <francois@dechelle.net>
+
+	* fixed bug/crash in scan daemon
+
 2015-05-12  François  <francois@dechelle.net>
 
 	* added watch daemon using dbus
