--- a/modules/clamav/TODO
+++ b/modules/clamav/TODO
@@ -2,5 +2,5 @@
 - configuration:
 * mettre la liste des bases à charger dans le fichier de config (pour bases OIV)
 
-- faire module de scan utilisant clamd???:
+- faire module de scan utilisant clamd [NON]
 * problème asynchronisme si utilisation du scan récursif de clamd (MULTISCAN ou SCAN file/directory)
