--- a/gui/ChangeLog
+++ b/gui/ChangeLog
@@ -1,3 +1,7 @@
+2015-07-31  François  <francois@dechelle.net>
+
+	* fixed i18n initialization problem
+
 2015-05-29  François  <francois@dechelle.net>
 
 	* implementation of recent scans in progress; almost works
