--- a/libuhuru/ChangeLog
+++ b/libuhuru/ChangeLog
@@ -1,3 +1,7 @@
+2015-08-19  François  <francois@dechelle.net>
+
+	* removing some exported print functions
+
 2015-08-06  François  <francois@dechelle.net>
 
 	* fixing calls to fprintf to signal error or print debug messages; now using g_log() with appropriate level
