* pushed the configuration parser code to its own file * changed signature of set/get configuration functions; now argv is NULL terminated, remove argc argument

--- a/libuhuru/ChangeLog
+++ b/libuhuru/ChangeLog
@@ -1,3 +1,9 @@
+2015-08-25  François  <francois@dechelle.net>
+
+	* pushed the configuration parser code to its own file
+
+	* changed signature of set/get configuration functions; now argv is NULL terminated, remove argc argument
+
 2015-08-24  François  <francois@dechelle.net>
 
 	* implementing new config system: changed internal modules and clamav module to use configuration table; in progress
