--- a/gui/ChangeLog
+++ b/gui/ChangeLog
@@ -1,3 +1,7 @@
+2015-09-14  François  <francois@dechelle.net>
+
+	* fixed compilation; works; commented out 'Recent analysis' for now
+
 2015-07-31  François  <francois@dechelle.net>
 
 	* fixed i18n initialization problem
